[package]
name = "xen"
version = "0.0.0"
edition = "2018"

[dependencies]
xen-sys = { path = "../xen-sys" }
cty = "0.2.2"
spin = "0.9.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.14"
displaydoc = { version = "0.2.3", default-features = false }
bitflags = "1.3.2"

[build-dependencies]
cc = "1.0.73"
